content/terraform/v1.16.x/docs/cli/commands/state/pull.mdx
---
page_title: terraform state pull command reference
description: >-
  The `terraform state pull` command downloads and outputs state information from a remote state or local state.
# START AUTO GENERATED METADATA, DO NOT EDIT
created_at: 2025-11-19T19:11:19Z
last_modified: 2025-11-19T19:11:19Z
# END AUTO GENERATED METADATA
---

#  `terraform state pull` command

The `terraform state pull` downloads and outputs state information from a [remote state](/terraform/language/state/remote) or local state.

## Usage

Usage: `terraform state pull [options]`

This command downloads the state from its current location, upgrades the
local copy to the latest state file version that is compatible with
locally-installed Terraform, and outputs the raw format to stdout.

This command also accepts the following options:

- `-var 'NAME=VALUE'` - Sets a value for a single
  [input variable](/terraform/language/block/variable) declared in the
  root module of the configuration. Use this option multiple times to set
  more than one variable. Refer to
  [Input Variables on the Command Line](/terraform/cli/commands/plan#input-variables-on-the-command-line) for more information.

- `-var-file=FILENAME` - Sets values for potentially many
  [input variables](/terraform/language/block/variable) declared in the
  root module of the configuration, using definitions from a
  [`.tfvars` file](/terraform/language/values/variables#variable-definition-files).
  Use this option multiple times to include values from more than one file.
There are several other ways to set values for input variables in the root
module, aside from the `-var` and `-var-file` options. Refer to
[Assign values to input variables](/terraform/language/values/variables#assign-values-to-input-variables) for more information.

This is useful for reading values out of state (potentially pairing this
command with something like [jq](https://stedolan.github.io/jq/)). It is
also useful if you need to make manual modifications to state.

You cannot use this command to inspect the Terraform version of
the remote state, as it will always be converted to the current Terraform
version before output.

-> **Note:** Terraform state files must be in UTF-8 format without a byte order mark (BOM). For PowerShell on Windows, use `Set-Content` to automatically encode files in UTF-8 format. For example, run `terraform state pull | Set-Content terraform.tfstate`.
